# rust-sql-organizer

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/file_combiner/: error.rs  mod.rs
src/file_formatter/: mod.rs
src/searcher/: error.rs  mod.rs
src/sorter/: mod.rs
src/sql_file/: error.rs  mod.rs
