[package]
name = "rust-sql-organizer"
description = "This is a simple rust CLI tool to organize .sql files. This is a useful tool for my work, but I decided to share it as a project example"
version = "0.1.0"
edition = "2021"
authors = ["Steven Rudenko steven.gucum@gmail.com"]
repository = "https://github.com/TheSuperShell/rust-sql-organizer"
readme = "README.md"
license = "LICENSE"
keywords = ["cli", "sql", "os"]
categories = ["command-line-untilities"]


[dependencies]
clap = {version = "4.0", features = ["derive"]}
glob = "0.3.2"
lazy_static = "1.5.0"
phf = { version = "0.12.1", features = ["macros"] }
regex = "1.11.1"
tempdir = "0.3.7"
